--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <header>
         <nav class="navbar">
             <img src="./assets/logo_athleta_site.svg" alt="" id="imagem-logo">
-            <img src="./assets/dark-mode.svg" alt="" id="imagem-modo">
+            <div class="buttons">
+                <button onclick="window.location.href='index.html'" class="ia-button" id="button-inicio">Inicio</button>
+                <img src="./assets/dark-mode.svg" alt="Modo escuro" id="imagem-modo">
+            </div>
         </nav>
 
     </header>
