--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav class="navbar">
             <img src="./assets/logo_athleta_site.svg" alt="" id="imagem-logo">
             <div class="buttons">
-                <button onclick="window.location.href='index.html'" class="ia-button" id="button-inicio">Inicio</button>
+                <button onclick="window.location.href='index.html'" class="ia-button" id="button-inicio">Forms</button>
                 <img src="./assets/dark-mode.svg" alt="Modo escuro" id="imagem-modo">
             </div>
         </nav>
