fix/ajustando formulario

--- a/forms.html
+++ b/forms.html
@@ -117,7 +117,7 @@
 			</div>
 			<div>
 				<input type="radio" id="renda2" name="renda" value="Classe B: entre R$7,1 mil e R$ 22 mil">
-				<label for="renda2">lasse B: entre R$7,1 mil e R$ 22 mil</label>
+				<label for="renda2">Classe B: entre R$7,1 mil e R$ 22 mil</label>
 			</div>
 			<div>
 				<input type="radio" id="renda3" name="renda" value="Classe C: entre R$ 2,9 mil e R$ 7,1 mil">
